Tue Nov 16 19:26:30 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdnd-x11.c (_gdk_drag_get_protocol_for_display): 
	Squash strict aliasing warnings. 

2004-11-17  Davyd Madeley  <davyd@madeley.id.au>

	* gtk/gtkfilechooserdefault.c: Allow backspace to move up the
	FileChooser tree to make it consistent with Nautilus and others.

2004-11-16  Matthias Clasen  <mclasen@redhat.com>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): Fix a 
	copy-and-paste error.  (#158459) 

	* demos/gtk-demo/*.c: Don't include config.h in the examples.

Tue Nov 16 00:08:07 2004  Jonathan Blandford  <jrb@redhat.com>

	* docs/tools/widgets.c: Update so that toplevel windows accomodate
	for the titlebar when sizing.  Also clean up statusbar

	* docs/reference/gtk/images/*png: update

2004-11-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrenderertext.c (get_layout): Don't use the foreground
	color for selected cells, Don't use the background color
	in unfocused selected cells. Also avoid creating two PangoLayouts
	per render call.  (#154615, #154611, Billy Biggs)

Mon Nov 15 19:02:07 2004  Manish Singh  <yosh@gimp.org>

	* gdk/abicheck.sh
	* gtk/abicheck.sh: don't hardcode lengths for cut, instead split on
	the third field.

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c: Reduce the clipboard timeout from 300
	seconds to 30 seconds.  (#155428, Billy Biggs)

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_setting_changed): 
	* gtk/gtkbutton.c (gtk_button_setting_changed): Really free the
	list.  (#158422, Morten Welinder)

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_screen_changed) 
	* gtk/gtkbutton.c (gtk_button_screen_changed): Use 
	GPOINTER_TO_UINT()/GUINT_TO_POINTER() for guints.  (#158420,
	Morten Welinder)

Mon Nov 15 17:17:17 2004  Manish Singh  <yosh@gimp.org>

	* configure.in: Output Makefile for the pixbuf engine directory.

	* gtk/gtk.symbols: Add gtk_button_{get,set}_image.
